--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body{
   min-height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   background-color: #D198B7;
@@ -9,7 +9,6 @@ body{
 *,*::after,*::before{
   margin: 0;
   padding: 0;
-  border: 0;
   box-sizing: border-box;
   -webkit-user-select: none; 
   -ms-user-select: none; 
@@ -21,6 +20,16 @@ body{
   width: 80vw;
   height: inherit;
   margin-inline: auto;
+}
+.TEXTCENTER{
+  text-align: center;
+}
+
+/*BUTTON*/
+.button{
+  padding: 5rem;
+  background-color: #CDB4DB;
+  color: #FFFFFF;
 }
 
 /*FONTS*/
@@ -36,14 +45,17 @@ body{
 .BOLD{
   font-weight: 700;
 }
+.LIGHT{
+  font-weight: 300;
+}
 h1{
   font-size: 65px;
 }
 h2{
-  font-size: 55px;
+  font-size: 45px;
 }
 h3{
-  font-size: 40px;
+  font-size: 35px;
 }
 h4{
   font-size: 30px;
@@ -88,7 +100,8 @@ p{
 /*HERO*/
 .hero-container{
   background-image: url("./hero-img.svg");
-  height: calc(80vh - 64px);
+  min-height: 80vh;
+  max-width: 100vw;
   margin-top: 5vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -103,3 +116,50 @@ p{
   align-items: center;
 }
 
+
+/*ABOUT ME */
+.about-me-container{
+  margin-top: 8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+.about-me-text-container{
+  display: flex;
+  gap: 3rem;
+}
+.about-me-text{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.about-me-img{
+  width: 50%;
+}
+
+
+
+
+@media only screen and (max-width: 700px) {
+
+  h1{
+    font-size: 40px;
+  }
+  h2{
+    font-size: 35px;
+  }
+  h3{
+    font-size: 25px;
+  }
+  h4{
+    font-size: 20px;
+  }
+  span{
+    font-size: 14px;
+  }
+  p{
+    font-size: 12px;
+  }
+  
+
+}
