--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,21 @@ body{
 }
 
 /*BUTTON*/
-.button{
-  padding: 5rem;
+.BUTTON{
+  padding: 0.8rem;
+  opacity: 0.8;
+  max-width: 200px;
+  border-radius: 25px;
   background-color: #CDB4DB;
   color: #FFFFFF;
+  border: none;
+  font-size: 17px;
 }
-
+.BUTTON:hover{
+  transform: scale(105%);
+  opacity: 1;
+  box-shadow: 0px 10px 25px -15px rgba(255, 255, 255, 1);
+}
 /*FONTS*/
 .ONE{
   font-family: 'Lilita One', cursive;
@@ -89,6 +98,7 @@ p{
   flex-direction: column;
   position: fixed;
   width: 100%;
+  z-index: 99999;
 }
 .nav-bar-top{
   background-color: #FFFFFF;
@@ -120,6 +130,7 @@ p{
 /*ABOUT ME */
 .about-me-container{
   margin-top: 8rem;
+  margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
   gap: 4rem;
@@ -134,13 +145,21 @@ p{
   gap: 2rem;
 }
 .about-me-img{
-  width: 50%;
+  height: 400px;
+  filter: brightness(90%);
+  padding: 15px 15px;
+  background-color: white;
+  box-shadow: 0px 10px 55px -35px rgba(255, 255, 255, 1);
 }
 
 
 
 
 @media only screen and (max-width: 700px) {
+
+  .hero-container{
+    margin-top: 2rem;
+  }
 
   h1{
     font-size: 40px;
@@ -161,5 +180,8 @@ p{
     font-size: 12px;
   }
   
+  .about-me-text-container{
+    flex-direction: column;
+  }
 
 }
