--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
 body{
   min-height: 100vh;
-  max-width: 100vw;
   display: flex;
   flex-direction: column;
   background-color: #D198B7;
-}
-
-*,*::after,*::before{
   margin: 0;
   padding: 0;
+  border: 0;
+}
+
+*,
+*::after,
+*::before{
+  margin: 0;
+  padding: 0;
+  border: 0;
   box-sizing: border-box;
   -webkit-user-select: none; 
   -ms-user-select: none; 
@@ -17,7 +22,7 @@ body{
 
 /*FIXED VARS*/
 .container{
-  width: 80vw;
+  width: 80%;
   height: inherit;
   margin-inline: auto;
 }
@@ -94,24 +99,23 @@ p{
 
 /*NAVBAR*/
 .nav-bar-container{
-  display: flex;
-  flex-direction: column;
   position: fixed;
   width: 100%;
-  z-index: 99999;
+  z-index: 2;
 }
 .nav-bar-top{
   background-color: #FFFFFF;
 }
 .nav-bar-bottom-img{
   width: 100%;
+  object-fit: contain;
 }
 
 /*HERO*/
 .hero-container{
   background-image: url("../public/hero-img.svg");
   min-height: 80vh;
-  max-width: 100vw;
+  width: 100%;
   margin-top: 5vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -153,6 +157,32 @@ p{
 }
 
 
+/*PORTFOLIO*/
+.portfolio-bg{
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(".././public/portfolio-bg.svg");
+  padding-bottom: 2rem;
+}
+.portfolio-item{
+  box-shadow: 0px 10px 35px -60px rgba(255, 255, 255, 1);
+}
+.portfolio-img{
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
+}
+.portfolio-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: space-evenly;
+}
+.portfolio-header{
+  padding-bottom: 4rem;
+  padding-top: 6rem;
+}
 
 
 @media only screen and (max-width: 700px) {
