--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,9 @@ body{
 
 /*BUTTON*/
 .BUTTON{
-  padding: 0.8rem;
+  padding: 1rem;
   opacity: 0.8;
-  max-width: 200px;
+  width: 200px;
   border-radius: 25px;
   background-color: #CDB4DB;
   color: #FFFFFF;
@@ -115,11 +115,9 @@ p{
 .hero-container{
   background-image: url("../public/hero-img.svg");
   min-height: 80vh;
-  width: 100%;
   margin-top: 5vh;
   background-repeat: no-repeat;
   background-size: cover;
-  justify-content: center;
   display: flex;
   align-items: center;
 }
@@ -201,14 +199,20 @@ p{
 }
 .contact-card:hover{
   box-shadow: 0px 10px 35px -60px rgba(255, 255, 255, 1);
-  opacity: 1;
+  opacity: 0.8;
 }
 .contact-card-text{
   background-color: #FFFFFF;
   display: flex;
   align-items: center;
-  gap: 3rem;
+  gap: 1.5rem;
   height: 64px;
+}
+.contact-card-holder{
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  text-decoration: #000000;
 }
 .contact-header{
   padding-bottom: 4rem;
@@ -216,6 +220,15 @@ p{
 }
 .contact-card-top-img{
   width: 100%;
+}
+.card-link{
+  color: #000000;
+  opacity: 0.8;
+  width: 100%;
+  text-align: left;
+}
+.card-link:hover{
+  opacity: 1;
 }
 
 /*FOOTER*/
