--- a/src/index.css
+++ b/src/index.css
@@ -164,9 +164,6 @@ p{
   background-attachment: fixed;
   padding-bottom: 2rem;
 }
-.portfolio-item{
-  box-shadow: 0px 10px 35px -60px rgba(255, 255, 255, 1);
-}
 .portfolio-img{
   width: inherit;
   height: inherit;
@@ -181,6 +178,10 @@ p{
 .portfolio-header{
   padding-bottom: 4rem;
   padding-top: 6rem;
+}
+.portfolio-filter-container{
+  display: flex;
+  padding-bottom: 2rem;
 }
 
 /*CONTACT*/
